--- a/code/less/constants.less
+++ b/code/less/constants.less
@@ -80,6 +80,7 @@
 @gray-light:#bdc2c8;
 @green:#2ec19c;
 @violet:#602a7c;
+@yellow:#fad713;
 
 .bg-style(@color,@color-hover, @text-color) {
     (~".bg-style_@{color}") {
@@ -103,4 +104,5 @@
 .bg-style("gray-light", #00b88a, #67727a);
 .bg-style("green", @green, #ffffff);
 .bg-style("violet", #772c9e, #ffffff);
+.bg-style("yellow", #fbda56, #4b5962);
 
