--- a/code/less/icons.less
+++ b/code/less/icons.less
@@ -20,7 +20,7 @@
 .ico_content_view {
 	width:16px;
 	height:16px;
-	background-position:0 -36px;
+	background-position:0 -35px;
 }
 
 .ico_content_comments {
@@ -40,7 +40,44 @@
     margin-right: 8px;
     width:15px;
 }
-
+.ico_content_replay {
+   background-position:0 -216px;
+    height:15px;
+    margin-right: 8px;
+    width:11px;
+}
+.ico_content_pencil-bk {
+   background-position:0 -270px;
+    height:16px;
+    margin-right: 6px;
+    width:16px;
+}
+.ico_content_email {
+    background-position:0 -125px;
+    height:13px;
+    margin-right: 6px;
+    margin-top:-3px;
+    width:16px;
+}
+.ico_content_label {
+   background-position:0 -162px;
+    height:16px;
+    margin-right: 5px;
+    margin-top:-4px;
+    width:11px;
+}
+.ico_content_pets {
+   background-position:0 -180px;
+    height:15px;
+    margin-top:-3px;
+    width:14px;
+}
+.ico_content_check {
+   background-position:0 -324px;
+    height:12px;
+    margin-top:-3px;
+    width:16px;
+}
 /* 16 < */
 
 /* 24 > */
