--- a/code/less/layout.less
+++ b/code/less/layout.less
@@ -50,6 +50,13 @@ h1 {
 }
 h2, h3 { font-size:21px;}
 
+h5 {
+    color: #4B5962;
+    font-size:14px;
+    font-family: @font-family-narrow;
+    margin-bottom:10px;
+    text-transform: uppercase;
+}
 
 /* Content styles < */
 
