--- a/code/less/icons.less
+++ b/code/less/icons.less
@@ -78,6 +78,11 @@
     margin-top:-3px;
     width:16px;
 }
+.ico_content_folder {
+   background-position:0 -397px;
+    height:16px;
+    width:16px;
+}
 /* 16 < */
 
 /* 24 > */
